--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <br>
             </p>
             <ol class="ol-1">
-                <li><button class="button-yellow">SHOP NOW</button></li>
-                <li><button class="button-blue">EXPLORE</button></li>
+                <li><a href="page2.html"><button class="button-yellow">SHOP NOW</button></a></li>
+                <li><a href="page3.html"><button class="button-blue">EXPLORE</button></a></li>
             </ol>
         </body>
     </div>
