--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </p>
             <ol class="ol-1">
                 <li><a href="page2.html"><button class="button-yellow">SHOP NOW</button></a></li>
+                <li><a href="page3.html"><button class="button-blue">EXPLORE</button></a></li>
             </ol>
         </body>
     </div>
