update link tiktok

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer>
         <ol class="ol-2">
             <li><a href="https://www.instagram.com/larimanis_group/"><img src="./assets/logo/instagram.png" alt="Instagram"></a></li>
-            <li><a href="https://www.instagram.com/larimanis_group?igsh=b253N2VoZ2x6ZmJ2&utm_source=qr"><img src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
+            <li><a href="https://www.tiktok.com/@larismanis.group?_t=8iOQW0JrieQ&_r=1"><img src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
             <li><a href=""><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
         </ol>
         <h3>
