Finish tinggal perubahan isinya

--- a/AyamBekakak.html
+++ b/AyamBekakak.html
@@ -11,29 +11,23 @@
         <div class="block-1"></div>
         <div class="block-2"></div>
         <div class="block-3"></div>
-        <img src="./assets/logo/logo.jpg" alt="Logo" class="gamba-2" />
-        <ol class="ol-1">
-            <li><a href="#"><button>Artikel</button></a></li>
-            <li><a href="#"><button>Belanja</button></a></li>
-        </ol>
+        <a href="index.html"><img src="./assets/logo/logo.jpg" alt="Logo" class="gamba-2" /></a>
         <ol class="ol-2">
-            <li><a href="https://www.instagram.com/larimanis_group/"><img src="./assets/logo/instagram.png"
+            <li><a href="https://www.instagram.com/larismanisss2024/"><img src="./assets/logo/instagram.png"
                         alt="Instagram"></a></li>
             <li><a href="https://www.tiktok.com/@larismanis.group?_t=8iOQW0JrieQ&_r=1"><img
                         src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
-            <li><a href="#"><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=6285920059964"><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
         </ol>
     </div>
     <div class="body">
-        <img src="./assets/image/image4.jpg" alt="Not Found" class="gamba-3" />
+        <img src="./assets/image/image5.jpg" alt="Not Found" class="gamba-3" />
         <div class="right">
-            <h2>Ayam Potong Paha Dada Pedas Manis</h2>
+            <h2>Ayam Bekakak</h2>
             <p>Berat bersih : 450g</p>
             <p class="parag">
-                Ayam Potong kualitas ayam segar hadir dengan kelezatan bumbu pedas manis
-                special, yang unik dan segar. Tanpa pengawet, diproses dan dibekukan
-                dengan teknologi terkini membuat bumbu meresap sempurna dan menjaga
-                daging ayam tetap juicy dan nikmat rasanya.
+                <!-- Ayam bekakak adalah hidangan ayam bakar khas Sunda yang memiliki ciri khas unik dan sarat makna. Ayam bekakak lebih dari sekadar hidangan biasa. Cita rasanya yang lezat, penampilannya yang unik, dan maknanya yang dalam menjadikan hidangan ini representasi budaya Sunda yang kaya dan penuh warna. -->
+                Ayam bekakak adalah hidangan ayam goreng khas Jawa Timur, tepatnya berasal dari daerah Blitar. Dibuat dengan menggunakan ayam kampung muda yang dipotong kecil-kecil. Dinamakan "bekakak" karena potongan ayam yang digoreng melengkung menyerupai paruh ayam yang sedang berkokok.
             </p>
             <div class="group-392">
                 <img src="./assets/image/goreng.jpg" alt="Not Found" class="image" />
@@ -84,6 +78,16 @@
                 </p>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <ol class="ol-4">
+            <li style="padding-right: 35%; padding-left: 15%;"><h3>Harga: Rp 28.000,00</h3></li>
+            <li>
+                <a href="https://api.whatsapp.com/send?phone=6285920059964&text=Halo%20saya%20pesan%20yang%20ayam%20bekakak%20jumlahnya%20[tolong%20isi]">
+                    <button style="width: 150px; height: 40px;"><img src="./assets/logo/whatsapp.png" alt="Whatsapp" style="width: 12px; height: auto;">Pesan</button>
+                </a>
+            </li>
+        </ol>
     </div>
 </body>
 
