--- a/Menu.html
+++ b/Menu.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Page2</title>
+    <title>Menu Laris Manis</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./css/style1.css" />
 </head>
@@ -13,20 +13,42 @@
         <div class="block-3"></div>
         <img src="./assets/logo/logo.jpg" alt="Logo" class="gamba-2" />
         <ol class="ol-1">
-            <li><a href="#"><button>Artikel</button></a></li>
-            <li><a href="#"><button>Belanja</button></a></li>
+            <li><a href="page3.html"><button>Belanja</button></a></li>
         </ol>
         <ol class="ol-2">
-            <li><a href="https://www.instagram.com/larimanis_group/"><img src="./assets/logo/instagram.png"
+            <li><a href="https://www.instagram.com/larismanisss2024/"><img src="./assets/logo/instagram.png"
                         alt="Instagram"></a></li>
             <li><a href="https://www.tiktok.com/@larismanis.group?_t=8iOQW0JrieQ&_r=1"><img
                         src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
-            <li><a href="#"><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=6285920059964"><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
         </ol>
     </div>
     <div class="body">
         <h1>Produk Lainnya</h1>
-        <table class="table">
+        <ul class="ol-3">
+            <li>
+                <ul>
+                    <li><img src="./assets/image/image5.jpg" alt="" class="image-2"></li>
+                    <li><a href="AyamBekakak.html" class="green">Ayam Bekakak</a></li>
+                    <li><p class="para">Menghadirkan ayam bekakak khas Sunda</p></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><img src="./assets/image/image3.jpg" alt="" class="image-2"></li>
+                    <li><a href="AyamBumbuBakar.html" class="green">Ayam Bumbu Bakar</a></li>
+                    <li><p class="para">Menghadirkan ayam untuk kegiatan bakar-bakaran</p></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><img src="./assets/image/image2.jpg" alt="" class="image-2"></li>
+                    <li><a href="AyamDower.html" class="green">Ayam Dower</a></li>
+                    <li><p class="para">Menghadirkan ayam dower yang siap dimasak</p></li>
+                </ul>
+            </li>
+        </ul>
+        <!-- <table class="table">
             <tr>
                 <td><img src="./assets/image/image2.jpg" alt="" class="image-2"></td>
                 <td><img src="./assets/image/image3.jpg" alt="" class="image-2"></td>
@@ -34,28 +56,28 @@
             </tr>
             <tr>
                 <td>
-                    <p class="green">Chicken Cuts Original</p>
+                    <p class="green">Ayam Bekakak</p>
                 </td>
                 <td>
-                    <p class="green">Chicken Cuts</p>
+                    <p class="green">Ayam Khas Depok</p>
                 </td>
                 <td>
-                    <p class="green">Ayam Potong Paha & Dada</p>
+                    <p class="green">Ayam Dower</p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    menghadirkan Original Chicken Cuts potongan daging
+                    Menghadirkan ayam bekakak khas Sunda
                 </td>
                 <td>
-                    menghadirkan Spicy Chicken Cuts potongan daging
+                    Menghadirkan ayam yang sudah dimarisani khas Depok
                 </td>
                 <td>
-                    Potong Paha Dada adalah premium cut
+                    Menghadirkan ayam dower yang siap dimasak
                 </td>
             </tr>
-        </table>
-        <table class="table tb">
+        </table> -->
+        <!-- <table class="table tb">
             <tr>
                 <td>Belanja</td>
                 <td>Produk</td>
@@ -75,11 +97,11 @@
                     </ul>
                 </td>
             </tr>
-        </table>
+        </table> -->
     </div>
     <footer>
         <ol class="ol-3">
-            <li><a href="https://www.instagram.com/larimanis_group/"><img src="./assets/logo/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://www.instagram.com/larismanisss2024/"><img src="./assets/logo/instagram.png" alt="Instagram"></a></li>
             <li><a href="https://www.instagram.com/larimanis_group?igsh=b253N2VoZ2x6ZmJ2&utm_source=qr"><img src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
             <li><a href=""><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
         </ol>
@@ -88,7 +110,7 @@
             <br>
             <a href="mailto:larismanis@gmail.com">larismanis@.com</a>
             <br>
-            (0804) 150 9006
+            0859-2005-9964
         </h3>
     </footer>
 </body>
