--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
 
 <body>
     <div class="shape">
-        <header>
-            <ul>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </header>
         <br>
 
         <body>
@@ -39,23 +31,22 @@
                 <br>
             </p>
             <ol class="ol-1">
-                <li><a href="page2.html"><button class="button-yellow">SHOP NOW</button></a></li>
-                <li><a href="page3.html"><button class="button-blue">EXPLORE</button></a></li>
+                <li><a href="Menu.html"><button class="button-yellow">SHOP NOW</button></a></li>
             </ol>
         </body>
     </div>
     <footer>
         <ol class="ol-2">
-            <li><a href="https://www.instagram.com/larimanis_group/"><img src="./assets/logo/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://www.instagram.com/larismanisss2024/"><img src="./assets/logo/instagram.png" alt="Instagram"></a></li>
             <li><a href="https://www.tiktok.com/@larismanis.group?_t=8iOQW0JrieQ&_r=1"><img src="./assets/logo/tiktok.png" alt="Tiktok"></a></li>
-            <li><a href=""><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=6285920059964"><img src="./assets/logo/whatsapp.png" alt="Whatsapp"></a></li>
         </ol>
         <h3>
             Customer Care
             <br>
             <a href="mailto:larismanis@gmail.com">larismanis@.com</a>
             <br>
-            (0804) 150 9006
+            0859-2005-9964
         </h3>
     </footer>
 </body>
