--- a/AyamBekakak.html
+++ b/AyamBekakak.html
@@ -11,7 +11,7 @@
         <div class="block-1"></div>
         <div class="block-2"></div>
         <div class="block-3"></div>
-        <a href="index.html"><img src="./assets/logo/logo.jpg" alt="Logo" class="gamba-2" /></a>
+        <a href="/"><img src="./assets/logo/logo.jpg" alt="Logo" class="gamba-2" /></a>
         <ol class="ol-2">
             <li><a href="https://www.instagram.com/larismanisss2024/"><img src="./assets/logo/instagram.png"
                         alt="Instagram"></a></li>
